Fixed tour cards wrapping, didn't resize properly when resizing the window

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ a.nav-link {
 .tours {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 30px;
   margin-bottom: 100px;
 }
